<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.berit.mymap.MainActivity">
    <item
        android:id="@+id/menu_trackposition"
        android:orderInCategory="100"
        android:checkable="true"
        android:title="@string/menu_trackposition"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_mylocation"
        android:orderInCategory="100"
        android:checkable="true"
        android:title="@string/menu_mylocation"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_keepmapcentered"
        android:orderInCategory="100"
        android:checkable="true"
        android:title="@string/menu_keepmapcentered"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_map_zoom"
        android:orderInCategory="100"
        android:title="@string/menu_map_zoom"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menu_map_zoom_in"
                android:orderInCategory="100"
                android:title="@string/menu_map_zoom_in"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_map_zoom_out"
                android:orderInCategory="100"
                android:title="@string/menu_map_zoom_out"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_map_zoom_fittrack"
                android:orderInCategory="100"
                android:title="@string/menu_map_zoom_fittrack"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_map_zoom_10"
                android:orderInCategory="100"
                android:title="@string/menu_map_zoom_10"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_map_zoom_15"
                android:orderInCategory="100"
                android:title="@string/menu_map_zoom_15"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_map_zoom_20"
                android:orderInCategory="100"
                android:title="@string/menu_map_zoom_20"
                app:showAsAction="never" />
        </menu>
    </item>

    <item
        android:id="@+id/menu_maptype"
        android:title="@string/maptype">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/menu_maptype_normal"
                android:checked="true"
                android:title="@string/maptype_normal"
                />
            <item
                android:id="@+id/menu_maptype_hybrid"
                android:title="@string/maptype_hybrid"
                />
            <item
                android:id="@+id/menu_maptype_satellite"
                android:title="@string/maptype_satellite"
                />
            <item
                android:id="@+id/menu_maptype_terrain"
                android:title="@string/maptype_terrain"
                />
            <item
                android:id="@+id/menu_maptype_none"
                android:title="@string/maptype_none"
                />
            </group>
        </menu>
    </item>
</menu>
